--- a/spring-cloud-bus/spring-cloud-config-client/src/main/resources/bootstrap.yml
+++ b/spring-cloud-bus/spring-cloud-config-client/src/main/resources/bootstrap.yml
@@ -1,9 +1,18 @@
 spring:
   application:
-    name: bootiful-client
+    name: config-client
   cloud:
     config:
       uri: http://localhost:8888
+      failFast: true
       username: root
       password: s3cr3t
-#management.security.enabled=false
+    stream:
+      bindings:
+        springCloudBusInput:
+          group: config-client
+  main:
+    web-environment: false
+#management:
+#  security:
+#    enabled: false
