--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
   <version>1.0-SNAPSHOT</version>
 
   <modules>
+	<module>spring-cloud</module>
+	<module>spring-oauth2-zuul</module>
     <module>spring-cloud-bus</module>
-    <module>spring-cloud</module>
     <module>spring-amqp</module>
   </modules>
 
